# startracker

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build_project.py  install_service.sh  nginx.conf  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  startracker.service
.github/workflows/: docker.yml  main.yml
docs/: arducam_imx462.md  components.md  raspberrypi.md
hardware/Startracker/: Startracker_Mainboard.SchDoc  Startracker_Power.SchDoc  Startracker_Stepper.SchDoc  Startracker_mainboard.PrjPcb  Startracker_mainboard.PrjPcbStructure  Startracker_mainboard.SchDoc  Startracker_mainboard.html  Startracker_mainboard.txt
hardware/Startracker/OutJob_Files/: Startracker_mainboard_ASSY.OutJob  Startracker_mainboard_DOC.OutJob  Startracker_mainboard_PCB.OutJob  Startracker_mainboard_Test-Eng.OutJob  Startracker_mainboard_Validation.OutJob
hardware/Startracker/Project Outputs for Startracker_mainboard/: Design Rule Check - Startracker_mainboard.drc  Design Rule Check - Startracker_mainboard.html  Status Report.Txt
hardware/Startracker/Project Outputs for Startracker_mainboard/Release_A00/: StartrackerA00_BOM.xlsx  Startracker_A00_iBOM.html
hardware/Startracker/Project Outputs for Startracker_mainboard/Release_A00/Gerber-Drill/: Startracker_A00-RoundHoles.TXT  Startracker_A00-SlotHoles.TXT  Startracker_A00-macro.APR_LIB  Startracker_A00.DRR  Startracker_A00.EXTREP  Startracker_A00.G1  Startracker_A00.G2  Startracker_A00.GBL  Startracker_A00.GBO  Startracker_A00.GBP  Startracker_A00.GBS  Startracker_A00.GD1  Startracker_A00.GM1  Startracker_A00.GM16  Startracker_A00.GM32  Startracker_A00.GTL  Startracker_A00.GTO  Startracker_A00.GTP  Startracker_A00.GTS  Startracker_A00.LDP  Startracker_A00.REP  Startracker_A00.apr
hardware/Startracker/Project Outputs for Startracker_mainboard/Release_A00/Pick Place/: A00_Startracker.csv  A00_Startracker.txt
install/: blacklist-custom.conf  copy.sh  install_service.sh  nginx.conf  startracker-shutdown-handler.sh  startracker-shutdown.service  startracker.service
src/: app.rs  attitude_estimation.rs  cam.rs  cam_cal.rs  cam_mock.rs  cam_thread.rs  cam_thread_mock.rs  common_axis.rs  lib.rs  opencvutils.rs  optim.rs  poisson_disk.rs  starcal.rs  stargradcal.rs  testingutils.rs  util.rs  utils.rs  webserver.rs  webutils.rs
startracker/: .gitignore  __init__.py  attitude_estimation.py  axis_align.py  calibration.py  camera_calibration.py  camera_debug.py  camera_recorder.py  camera_stream.py  camera_webgui.py  communication.py  config.py  const.py  default_config.yml  deriv.py  image_debug.py  image_processing.py  image_utils.py  initial_starcal.py  initial_starcal_scratch.py  intrinsic_starcal_demo.py  kalkam.py  libstartracker.pyi  main.py  messages.py  motor_alignment_evaluation.py  persistent.py  protocol.py  rust_cam.py  starcamcal.py  test_attitude_estimation.py  test_communication.py  test_initial_starcal.py  test_main.py  test_protocol.py  test_starcamcal.py  test_trajectory.py  test_transform.py  test_util.py  test_webutil.py  (+6 more)
startracker/camera/: __init__.py  camera.py  mock_camera.py  rpi.py
startracker/demo/: demo_utils.py  intrinsic_starcal_demo.py  web_to_video.py
startracker/scripts/: motor_alignment_evaluation.py
stm32/startracker-fw/: .cproject  .gitignore  .mxproject  .project  startracker-fw.ioc
stm32/startracker-fw/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32/startracker-fw/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32/startracker-fw/Core/Startup/: startup_stm32f411ceux.s
stm32/startracker-fw/USB_DEVICE/App/: usbd_cdc_if.c
stm32/startracker-fw/application/: APA102C.cpp  APA102C.h  application.cpp  application.h  button.cpp  button.h  control.cpp  control.h  image.cpp  image.h  imu.cpp  imu.h  motor.cpp  motor.h  oled_demo.cpp  oled_demo.h  out.c  out.h  perf.cpp  perf.h  rpi_protocol.cpp  rpi_protocol.h  scheduler.c  scheduler.h  serial.cpp  serial.h  serial_vcp.cpp  serial_vcp.h  ssd1306_write_float.cpp  ssd1306_write_float.h  stm32_hal.h  tmc220x.cpp  tmc220x.h  ui.cpp  ui.h  virtual_com.cpp  virtual_com.h
stm32/startracker-fw/image/: image_converter.py  img_battery0.c  img_battery1.c  img_battery10.c  img_battery2.c  img_battery3.c  img_battery4.c  img_battery5.c  img_battery6.c  img_battery7.c  img_battery8.c  img_battery9.c  img_battery_full.c  img_blank.c  img_camera.c  img_low_battery.c  img_motor.c  img_power.c  img_power_active.c  img_rpi.c  img_splash.c  img_ursa_maior.c
stm32/startracker-fw/mpu9250/: mpu9250.cpp  mpu9250.h  mpu9250_hal.cpp  mpu9250_hal.h
stm32/startracker-fw/ssd1306/: fonts.h  ssd1306.c  ssd1306.h  ssd1306_defines.h
tests/: test_attitude_estimation.py  test_communication.py  test_deriv.py  test_image_processing.py  test_initial_starcal.py  test_main.py  test_starcamcal.py  test_trajectory.py  test_transform.py  test_web_gui.py  test_webutil.py
web/: .gitignore  axisAlign.html  axisAlign.js  cameraWebgui.html  cameraWebgui.js  index.html  style.css  util.js  zoomHandler.js
