[package]
name = "startracker"
version = "0.1.0"
edition = "2021"

[lib]
name = "startracker"
crate-type = ["cdylib"]

[[bin]]
name = "startracker"
path = "src/webserver.rs"
required-features = ["webserver"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
numpy = "0.21.0"
nalgebra = "0.33.2"
kdtree = "0.7.0"
rand = "0.9.1"
libcamera = { version = "0.3.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"], optional = true }
warp = { version = "0.3", optional = true }
serde_json = {version="1.0.140", optional = true }
futures-util = {version="0.3.31", optional = true}
opencv = {version="0.94.4", optional = true}

[features]
default = []
cam = ["libcamera"]
webserver = ["tokio", "warp", "serde_json", "futures-util", "opencv"]
