[package]
name = "startracker"
version = "0.1.0"
edition = "2021"

[lib]
name = "startracker"
crate-type = ["cdylib"]

[[bin]]
name = "startracker"
path = "src/webserver.rs"

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
numpy = "0.21.0"
nalgebra = "0.33.2"
kdtree = "0.7.0"
rand = "0.9.1"
libcamera = { version = "0.3.0", optional = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
] }
warp = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
opencv = { version = "0.94.4", features = ["clang-runtime"] }
crossbeam-channel = "0.5.15"
bytemuck = "1.23.1"
num-traits = "0.2.19"
ruststartracker = { version = "0.2.7", features = ["improc", "hipparcos"] }
arc-swap = "1.7.1"
image = { version = "0.25.6", default-features = false, features = ["png"] }
rmp-serde = "1.3.0"
dirs = "6.0.0"

[features]
default = []
cam = ["libcamera"]
