[metadata]
name = startracker
version = 0.0.1
author = Nicolas Tobler
author_email = "nitobler(at)gmail.com"
description = Open-source Travel Photography Star Tracker
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/ntobler/startracker
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
package_dir =
   = startracker
packages = find:
python_requires = >=3.8

[options.packages.find]
where = startracker

[options.entry_points]
console_scripts =
    startracker = main:main
