[metadata]
name = startracker
version = 0.0.1
author = Nicolas Tobler
author_email = "nitobler(at)gmail.com"
description = Open-source Travel Photography Star Tracker
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/ntobler/startracker
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
package_dir =
   = .
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    opencv-python
    scipy
    flask
    flask-sock
    pyserial
    cots_star_tracker @ git+https://github.com/ntobler/COTS-Star-Tracker.git@simplification

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    startracker = startracker.main:main
    startracker-camera-recorder = startracker.camera_recorder:main
    startracker-camera-calibration = startracker.camera_calibration:main
